add nuget pack output path

--- a/LoggerDisposableExtensions/LoggerDisposableExtensions.csproj
+++ b/LoggerDisposableExtensions/LoggerDisposableExtensions.csproj
@@ -9,6 +9,7 @@
     <PackageProjectUrl>https://github.com/AJax2012/LoggerDisposableExtensions</PackageProjectUrl>
     <RepositoryUrl>https://github.com/AJax2012/LoggerDisposableExtensions</RepositoryUrl>
     <Authors>Adam Gardner</Authors>
+	<PackageOutputPath>./nupkg</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
